Fix the overflow on message bubbles with long names/attachments

--- a/Signal/stylesheets/manifest.css
+++ b/Signal/stylesheets/manifest.css
@@ -3001,7 +3001,8 @@ body.dark-theme {
   padding-right: 12px;
   padding-left: 12px;
   padding-top: 10px;
-  padding-bottom: 10px; }
+  padding-bottom: 10px;
+  min-width: 0px; }
 
 .module-message__container--incoming {
   background-color: #eeefef; }
